@@ -1,2 +1,0 @@
-<p>&amp;</p>
-<p>&amp; &quot;</p>
