@@ -1,2 +1,0 @@
-<!-- test a mixture of escaped and unescaped XHTML entities -->
-&lt; > &gt;
