@@ -1,4 +1,0 @@
-<!-- test text that does not contain any XHTML entities or characters requiring escaping -->
-a
-
-a b c 1 2 3
